fixed card size and tab alignment

--- a/src/Styles/PostJobCards.css
+++ b/src/Styles/PostJobCards.css
@@ -12,8 +12,8 @@ h2 {
    display: flex;
    flex-flow: column;
    align-items: center;
-   max-width: 1500px;
-   max-height: 4000px;
+   max-width: 1000px;
+   max-height: 3000px;
    width: 90%;
    margin: 0 auto;
 }
